syntax = "proto3";

package envoy.extensions.compression.gzip.compressor.fuzz;

message CompressorFuzzInput {
  enum CompressionLevel {
    STANDARD_LEVEL = 0;
    BEST = 1;
    SPEED = 2;
  }

  enum CompressionStrategy {
    STANDARD_STRATEGY = 0;
    FILTERED = 1;
    HUFFMAN = 2;
    RLE = 3;
  }

  CompressionLevel compression_level = 1;
  CompressionStrategy compression_strategy = 2;
  // Valid range: 9-15. Values outside this range will be clamped.
  int32 window_bits = 3;
  // Valid range: 1-9. Values outside this range will be clamped.
  int32 memory_level = 4;

  // Input data chunks to be compressed.
  repeated bytes data_chunks = 5;
}
